externals/mtime/include/mtime_datetime.h

/**
 * @struct _datetime
 *
 * @brief struct _datetime contains a struct _date and a struct _time element. 
 */

struct _datetime
{
  struct _date date;	///< Date elements.
  struct _time time;	///< Time elements.
};
struct _datetime*
replaceDatetime(struct _datetime* dtsrc, struct _datetime* dtdest);
char*
datetimeToString(struct _datetime* dt, char* toStr);
char *
datetimeToPosixString(struct _datetime* dt, char* toStr, char* fmtString);
int
getNoOfDaysInMonthDateTime(struct _datetime* dt);
int
getNoOfDaysInYearDateTime(struct _datetime* dt);
/*! \endcond */

int
getDayOfYearFromDateTime(struct _datetime* currentdt);
int64_t
getNoOfSecondsElapsedInMonthDateTime(struct _datetime* dt);
int
getNoOfSecondsElapsedInDayDateTime(struct _datetime* dt);
struct _julianday*
getJulianDayFromDateTime(struct _datetime* dt, struct _julianday* jd);
struct _datetime*
getDateTimeFromJulianDay(struct _julianday* jd, struct _datetime* dt);