externals/mtime/src/mtime_c_bindings.f90


    function my_replacedatetime(src, dest) result(ret_dest) bind(c, name='replaceDatetime')
      import :: c_ptr
      type(c_ptr) :: ret_dest
      type(c_ptr), value :: src
      type(c_ptr), value :: dest
    end function my_replacedatetime
    !
    function my_datetimetostring(my_time, string) result(string_ptr) bind(c, name='datetimeToString')
      import :: c_ptr, c_char
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: my_time
      character(c_char), dimension(*) :: string
    end function my_datetimetostring
    !
    function my_datetimetoposixstring(my_time, string, fmtstr) result(string_ptr) bind(c, name='datetimeToPosixString')
      import :: c_ptr, c_char
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: my_time
      character(c_char), dimension(*) :: string
      character(c_char), dimension(*) :: fmtstr
    end function my_datetimetoposixstring
    !
    function my_getnoofdaysinmonthdatetime(dt) bind(c, name='getNoOfDaysInMonthDateTime')
      import :: c_int, c_ptr
      integer(c_int) :: my_getnoofdaysinmonthdatetime
      type(c_ptr), value :: dt
    end function my_getnoofdaysinmonthdatetime
    !
    function my_getnoofdaysinyeardatetime(dt) bind(c, name='getNoOfDaysInYearDateTime')
      import :: c_int, c_ptr
      integer(c_int) :: my_getnoofdaysinyeardatetime
      type(c_ptr), value :: dt
    end function my_getnoofdaysinyeardatetime
    !
    function my_getdayofyearfromdatetime(dt) bind(c, name='getDayOfYearFromDateTime')
      import :: c_int, c_ptr
      integer(c_int) :: my_getdayofyearfromdatetime
      type(c_ptr), value :: dt
    end function my_getdayofyearfromdatetime
    !
    function my_getnoofsecondselapsedinmonthdatetime(dt) bind(c, name='getNoOfSecondsElapsedInMonthDateTime')
      import :: c_int64_t, c_ptr
      integer(c_int64_t) :: my_getnoofsecondselapsedinmonthdatetime
      type(c_ptr), value :: dt
    end function my_getnoofsecondselapsedinmonthdatetime
    !
    function my_getnoofsecondselapsedindaydatetime(dt) bind(c, name='getNoOfSecondsElapsedInDayDateTime')
      import :: c_int, c_ptr
      integer(c_int) :: my_getnoofsecondselapsedindaydatetime
      type(c_ptr), value :: dt
    end function my_getnoofsecondselapsedindaydatetime
    !
    function my_getjuliandayfromdatetime(dt, jd) bind(c, name='getJulianDayFromDateTime')
      import :: c_ptr
      type(c_ptr) :: my_getjuliandayfromdatetime
      type(c_ptr), value :: dt, jd
    end function my_getjuliandayfromdatetime
    !
    function my_getdatetimefromjulianday(jd, dt) bind(c, name='getDateTimeFromJulianDay')
      import :: c_ptr
      type(c_ptr) :: my_getdatetimefromjulianday
      type(c_ptr), value :: jd, dt
    end function my_getdatetimefromjulianday
    !
  end interface
  !
  interface
    !
    function my_newtimedeltafromstring(string) result(c_pointer) bind(c, name='newTimeDelta')
      import :: c_char, c_ptr
      type(c_ptr)                     :: c_pointer
      character(c_char), dimension(*) :: string
    end function my_newtimedeltafromstring
    !
    function my_newrawtimedelta(sign, year, month, day, hour, minute, second, ms) result(c_pointer) &
         &             bind(c, name='newRawTimeDelta')
      import :: c_int64_t, c_char, c_int, c_ptr
      type(c_ptr) :: c_pointer
      character(c_char), value :: sign
      integer(c_int64_t), value :: year
      integer(c_int), value :: month, day, hour, minute, second, ms
    end function my_newrawtimedelta
    !
    function my_constructandcopytimedelta(td) result(c_pointer) bind(c,name='constructAndCopyTimeDelta')
      import :: c_ptr
      type(c_ptr) :: c_pointer
      type(c_ptr), value :: td
    end function my_constructandcopytimedelta
    !
    subroutine my_deallocatetimedelta(dt) bind(c, name='deallocateTimeDelta')
      import :: c_ptr
      type(c_ptr), value :: dt
    end subroutine my_deallocatetimedelta
    !
    function my_comparetimedelta(op1, op2) result(ret) bind(c, name='compareTimeDelta')
      import :: c_ptr, c_int
      integer(c_int) :: ret
      type(c_ptr), value :: op1
      type(c_ptr), value :: op2
    end function my_comparetimedelta
    !
    function my_gettimedeltafromdate(my_date1,my_date2,timedelta_return) result(timedelta_ptr) &
         &    bind(c,name='getTimeDeltaFromDate')
      import :: c_ptr
      type(c_ptr) :: timedelta_ptr
      type(c_ptr), value :: my_date1, my_date2, timedelta_return
    end function my_gettimedeltafromdate
    !
    function my_gettimedeltafromdatetime(my_datetime1,my_datetime2,timedelta_return) result(timedelta_ptr) &
         &    bind(c,name='getTimeDeltaFromDateTime')
      import :: c_ptr
      type(c_ptr) :: timedelta_ptr
      type(c_ptr), value :: my_datetime1, my_datetime2, timedelta_return
    end function my_gettimedeltafromdatetime
    !
    function my_gettotalmillisecondstimedelta(my_timedelta, my_datetime) &
         &   bind(c, name='getTotalMilliSecondsTimeDelta')
      import :: c_ptr, c_int64_t
      integer(c_int64_t) :: my_gettotalmillisecondstimedelta
      type(c_ptr), value :: my_timedelta, my_datetime
    end function my_gettotalmillisecondstimedelta
    !
    function my_gettotalsecondstimedelta(my_timedelta, my_datetime) bind(c, name='getTotalSecondsTimeDelta')
      import :: c_ptr, c_int64_t
      integer(c_int64_t) :: my_gettotalsecondstimedelta
      type(c_ptr), value :: my_timedelta, my_datetime
    end function my_gettotalsecondstimedelta
    !
    function my_timedeltatostring(td, tostring) result(string_ptr) bind(c, name='timedeltaToString')
      import :: c_ptr, c_char
      type(c_ptr) :: string_ptr
      type(c_ptr), value :: td
      character(c_char), dimension(*) :: tostring
    end function my_timedeltatostring
    !
    function my_addtimedeltatodatetime(my_datetime, my_timedelta, ret_datetime) result(datetime_ptr) &
         &   bind(c, name='addTimeDeltaToDateTime')
      import :: c_ptr
      type(c_ptr) :: datetime_ptr
      type(c_ptr), value :: my_datetime, my_timedelta, ret_datetime
    end function my_addtimedeltatodatetime
    !
    function my_addtimedeltatodate(my_date, my_timedelta, ret_date) result(date_ptr) &
         &   bind(c, name='addTimeDeltaToDate')
      import :: c_ptr
      type(c_ptr) :: date_ptr
      type(c_ptr), value :: my_date, my_timedelta, ret_date
    end function my_addtimedeltatodate
    !
    function my_elementwisescalarmultiplytimedelta(my_timedelta, lambda, scaled_timedelta) result(timedelta_return) &
         &   bind(c, name='elementwiseScalarMultiplyTimeDelta')
      import :: c_ptr, c_int64_t
      type(c_ptr) ::timedelta_return
      type(c_ptr), value :: my_timedelta, scaled_timedelta
      integer(c_int64_t), value :: lambda
    end function my_elementwisescalarmultiplytimedelta
    !
    function my_elementwisescalarmultiplytimedeltadp(my_timedelta, lambda, scaled_timedelta) result(timedelta_return) &
         &   bind(c, name='elementwiseScalarMultiplyTimeDeltaDP')
      import :: c_ptr, c_double
      type(c_ptr) ::timedelta_return
      type(c_ptr), value :: my_timedelta, scaled_timedelta
      real(c_double), value :: lambda
    end function my_elementwisescalarmultiplytimedeltadp
    !
    function my_elementwiseAddTimeDeltatoTimeDelta(my_timedelta1,my_timedelta2,added_timedelta) result(timedelta_return) &
         &   bind(c, name='elementwiseAddTimeDeltatoTimeDelta')
      import :: c_ptr
      type(c_ptr) :: timedelta_return
      type(c_ptr), value :: my_timedelta1,my_timedelta2,added_timedelta
    end function my_elementwiseAddTimeDeltatoTimeDelta
    !
    function my_modulotimedelta(a, p, quot) result(rem) bind(c, name='moduloTimedelta')
      import :: c_ptr, c_int64_t
      integer(c_int64_t) :: rem
      type(c_ptr), value :: a
      type(c_ptr), value :: p
      type(c_ptr), value :: quot
    end function my_modulotimedelta
    !
    function my_getptstringfromms(ms, tostring) result(string_ptr) bind(c, name='getPTStringFromMS')
      import :: c_ptr, c_int64_t, c_char
      type(c_ptr) :: string_ptr
      integer(c_int64_t), value :: ms
      character(c_char), dimension(*) :: tostring
    end function my_getptstringfromms
    !
    function my_getptstringfromsecondsint(s, tostring) result(string_ptr) bind(c, name='getPTStringFromSeconds')
      import :: c_ptr, c_int64_t, c_char
      type(c_ptr) :: string_ptr
      integer(c_int64_t), value :: s
      character(c_char), dimension(*) :: tostring
    end function my_getptstringfromsecondsint
    !
    function my_getptstringfromsecondsfloat(s, tostring) result(string_ptr) bind(c, name='getPTStringFromSecondsFloat')
      import :: c_ptr, c_float, c_char
      type(c_ptr) :: string_ptr
      real(c_float), value :: s
      character(c_char), dimension(*) :: tostring
    end function my_getptstringfromsecondsfloat
    !
    function my_getptstringfromsecondsdouble(s, tostring) result(string_ptr) bind(c, name='getPTStringFromSecondsDouble')
      import :: c_ptr, c_double, c_char
      type(c_ptr) :: string_ptr
      real(c_double), value :: s
      character(c_char), dimension(*) :: tostring
    end function my_getptstringfromsecondsdouble
    !
    function my_getptstringfromminutes(m, tostring) result(string_ptr) bind(c, name='getPTStringFromMinutes')
      import :: c_ptr, c_int64_t, c_char
      type(c_ptr) :: string_ptr
      integer(c_int64_t),value :: m
      character(c_char), dimension(*) :: tostring
    end function my_getptstringfromminutes
    !
    function my_getptstringfromhours(h, tostring) result(string_ptr) bind(c, name='getPTStringFromHours')
      import :: c_ptr, c_int64_t, c_char
      type(c_ptr) :: string_ptr
      integer(c_int64_t),value :: h
      character(c_char), dimension(*) :: tostring
    end function my_getptstringfromhours
    !
    function my_timedeltatojuliandelta(td,dt,jd) result(c_pointer) bind(c,name='timeDeltaToJulianDelta')
      import :: c_int64_t, c_ptr
      type(c_ptr) :: c_pointer
      type(c_ptr), value :: td
      type(c_ptr), value :: dt
      type(c_ptr), value :: jd
    end function my_timedeltatojuliandelta
    !
    function my_divideTimeDeltaInSeconds(dividend, divisor, quotient) result(ret_quotient) bind(c,name='divideTimeDeltaInSeconds')
      import :: c_ptr
      type(c_ptr) :: ret_quotient
      type(c_ptr), value :: dividend
      type(c_ptr), value :: divisor
      type(c_ptr), value :: quotient
    end function my_divideTimeDeltaInSeconds
    !
    function my_divideDatetimeDifferenceInSeconds(dt1, dt2, divisor, quotient) result(ret_quotient) &
         &                                                                     bind(c,name='divideDatetimeDifferenceInSeconds')
      import :: c_ptr
      type(c_ptr) :: ret_quotient
      type(c_ptr), value :: dt1
      type(c_ptr), value :: dt2
      type(c_ptr), value :: divisor
      type(c_ptr), value :: quotient
    end function my_divideDatetimeDifferenceInSeconds
    !
    function my_divideTwoDatetimeDiffsInSeconds(dt1_dividend, dt2_dividend, &
         &                                      dt1_divisor,  dt2_divisor, denominator, quotient) &
         &                                       result(ret_quotient) &
         &                                       bind(c,name='divideTwoDatetimeDiffsInSeconds')
      import :: c_ptr
      type(c_ptr) :: ret_quotient
      type(c_ptr), value :: dt1_dividend
      type(c_ptr), value :: dt2_dividend
      type(c_ptr), value :: dt1_divisor
      type(c_ptr), value :: dt2_divisor
      type(c_ptr), value :: denominator
      type(c_ptr), value :: quotient
    end function my_divideTwoDatetimeDiffsInSeconds
    !
  end interface
  !
  interface
    !
    function my_newevent(name, referenceDate, firstdate, lastDate, interval, offset) result(c_pointer) &
         &              bind(c, name='newEvent')
      import :: c_char, c_ptr
      type(c_ptr) :: c_pointer
      character(c_char), dimension(*) :: name
      character(c_char), dimension(*) :: referenceDate
